# raseed-backend

./: .gitignore  README.md  app.py  email_listener.py  instruction.txt  pyproject.toml
controller/: intelligent.py  receipt.py
jobs/: mail.py
service/: invoice_categorization.py  receipt.py
